fixed: navbar spacing

--- a/public/css/quiz-result.css
+++ b/public/css/quiz-result.css
@@ -8,6 +8,8 @@
 }
 .navbar-bg{
     background: var(--navbar-bg);
+    padding: 1rem 1rem 0rem;
+
 }
 
 .qg-result-container{
